Â[ADD] QR and photos history